# retrokix

./: .fceumm-version  .gitignore  .snes9x-version  AGENTS.md  CHANGELOG.md  README.md  hatch_build.py  mkdocs.yml  pyproject.toml  tasks.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  api.md  automation.md  cli.md  concepts.md  index.md  installing.md  plugins.md  shaders.md  state-tracker.md
docs/cookbook/: emerald_party.md
docs/javascripts/: rotate.js  ticker.js  top_games_data.js
docs/stylesheets/: extra.css  landing.css
know-how/: building-libretro-core.md  smoke-testing.md
overrides/: home.html
scripts/: build_top_games.py  filter_fame.py  refresh_cheats.py  refresh_fame.py  refresh_library_metadata.py
src/gbax/: __init__.py  __main__.py  browse.py  cheats.py  cli.py  controller.py  driver.py  input.py  library.py  libretro.py  macros.py  pins.py  player.py  plugin.py  runtime.py  scenario.py
src/gbax/api/: __init__.py  action.py  buttons.py  capture_state.py  cheats.py  control.py  frame.py  headless.py  savestate.py  server.py  stream.py
src/gbax/cores/: __init__.py
src/gbax/couch/: __init__.py  cli.py  handle.py  identity.py  naming.py  session.py
src/gbax/data/: emerald_abilities.json  emerald_evolutions.json  emerald_growth_rates.json  emerald_items.json  emerald_levelup.json  emerald_mapsec.json  emerald_natures.json  emerald_species_info.json  emerald_types.json  libretro_cheats_gba.json  libretro_cheats_nes.json  no_intro_gba.json  wikipedia_fame.json
src/gbax/data/bots/: __init__.py  press_a.py  random.py
src/gbax/data/scenarios/: mk_arcade_easy.py  smb3_world_1_1.py
src/gbax/plugins/: __init__.py  emerald_data.py  emerald_formulas.py  emerald_matchup.py  emerald_party.py
src/gbax/plugins/pokemon/: emerald.py  emerald_couch.py  emerald_driver.py
src/gbax/plugins/pokemon/shared/: battle.py  data.py  encounters.py  formulas.py  hints.py  matchup.py  party.py  scene.py
src/gbax/render/: __init__.py  base.py  gamepad.py  sdl.py  sdl_renderer.py  wgpu_renderer.py
src/gbax/render/shaders/: _vertex.wgsl  nearest.wgsl
src/gbax/state/: capture.py  compile.py  scene.py  storage.py  watch.py
src/retrokix/: __init__.py  __main__.py  art.py  browse.py  cheats.py  cli.py  controller.py  driver.py  input.py  library.py  libretro.py  macros.py  pins.py  player.py  plugin.py  runtime.py  scenario.py  settings.py
src/retrokix/api/: __init__.py  action.py  audio_bus.py  buttons.py  capture_state.py  control.py  headless.py  memory.py  qos.py  savestate.py  server.py  stream.py
src/retrokix/cores/: __init__.py
src/retrokix/couch/: __init__.py  cli.py  handle.py  identity.py  session.py  wire.py
src/retrokix/data/: emerald_moves.json  emerald_national_dex.json  emerald_species.json  emerald_type_chart.json  libretro_cheats_gb.json  libretro_cheats_gba.json  libretro_cheats_gbc.json  libretro_cheats_snes.json  no_intro_gb.json  no_intro_gba.json  no_intro_gbc.json  no_intro_nes.json  no_intro_snes.json  wikipedia_fame.json
src/retrokix/data/bots/: __init__.py  press_a.py  random.py
src/retrokix/data/scenarios/: __init__.py  mk_arcade_easy.py  smb3_world_1_1.py
src/retrokix/hub/: __init__.py  downloads.py  library_view.py  reaper.py  server.py  state.py  templates.py
src/retrokix/plugins/: __init__.py
src/retrokix/plugins/pokemon/: emerald.py  emerald_couch.py  emerald_driver.py  pokedex.py
src/retrokix/plugins/pokemon/shared/: addresses.py  bag.py  battle.py  catch.py  context.py  data.py  encounters.py  formulas.py  gyms.py  matchup.py  party.py  pokedex.py  pokedex_model.py  saveblock.py  scene.py  text.py  world.py
src/retrokix/render/: __init__.py  _wgpu_surface.py  gamepad.py  sdl.py  wgpu_renderer.py
src/retrokix/render/shaders/: __init__.py  crt_lottes.wgsl
src/retrokix/state/: __init__.py  capture.py  compile.py  scene.py  storage.py  watch.py
src/retrokix/tui/: __init__.py  app.py  ask_widget.py  battle_widget.py  core_tab.py  hints_widget.py  llm.py  party_widget.py  playtime.py  pokedex_widget.py  prompt.py  route_widget.py  status.py  trainer_widget.py
tests/: conftest.py  test_api_qos.py  test_api_savestate.py  test_api_settings.py  test_api_stream.py  test_art.py  test_ask.py  test_audio_bus.py  test_battle_pane.py  test_browse.py  test_bundled_core.py  test_catch.py  test_cheats.py  test_cli_macros.py  test_cli_play.py  test_cli_scenario.py  test_cli_serve.py  test_cli_state.py  test_cli_tournament.py  test_cli_train.py  test_cli_tui.py  test_context.py  test_controller.py  test_core_tab.py  test_cores_helper.py  test_couch.py  test_couch_handle.py  test_couch_identity.py  test_couch_rooms.py  test_default_core_path.py  test_encounters.py  test_gamepad.py  test_gyms.py  test_hints_pane.py  test_hub_api.py  test_hub_downloads.py  test_hub_reaper.py  test_hub_state.py  test_input.py  test_library.py  (+43 more)
tests/api/: test_api.py
tests/fixtures/: README.md  minimal_bot.py  minimal_scenario.py
