[project]
name = "gbax"
version = "0.15.4"
description = "Hacker-first, scriptable GBA emulator with HTTP API"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Alejandro Piad" }]
keywords = ["gba", "emulator", "libretro", "mgba", "fastapi", "cli", "gameboy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: System :: Emulators",
]
dependencies = [
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "numpy>=1.26",
  "pillow>=10",
  "pysdl2>=0.9.16",
  "pysdl2-dll>=2.30",
  "cffi>=1.17",  # used by gbax.libretro to bind the libretro ABI
  "imagehash>=4.3",  # pHash/dHash for scene-detection fallback
]

[project.urls]
Homepage = "https://github.com/apiad/gbax"
Source = "https://github.com/apiad/gbax"
Issues = "https://github.com/apiad/gbax/issues"

[project.scripts]
gbax = "gbax.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
]
gpu = ["wgpu>=0.19", "rendercanvas>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gbax"]

[tool.hatch.build.targets.wheel.force-include]
"src/gbax/data/no_intro_gba.json" = "gbax/data/no_intro_gba.json"
"src/gbax/data/libretro_cheats_gba.json" = "gbax/data/libretro_cheats_gba.json"
"src/gbax/data/emerald_species.json" = "gbax/data/emerald_species.json"
"src/gbax/data/emerald_growth_rates.json" = "gbax/data/emerald_growth_rates.json"
"src/gbax/data/emerald_species_info.json" = "gbax/data/emerald_species_info.json"
"src/gbax/data/emerald_evolutions.json" = "gbax/data/emerald_evolutions.json"
"src/gbax/data/emerald_levelup.json" = "gbax/data/emerald_levelup.json"
"src/gbax/data/emerald_moves.json" = "gbax/data/emerald_moves.json"
"src/gbax/data/emerald_type_chart.json" = "gbax/data/emerald_type_chart.json"
"src/gbax/data/emerald_items.json" = "gbax/data/emerald_items.json"
"src/gbax/data/emerald_abilities.json" = "gbax/data/emerald_abilities.json"
"src/gbax/data/emerald_natures.json" = "gbax/data/emerald_natures.json"
"src/gbax/data/emerald_mapsec.json" = "gbax/data/emerald_mapsec.json"
"src/gbax/data/emerald_types.json" = "gbax/data/emerald_types.json"
"src/gbax/data/bots/__init__.py" = "gbax/data/bots/__init__.py"
"src/gbax/data/bots/press_a.py" = "gbax/data/bots/press_a.py"
"src/gbax/data/bots/random.py" = "gbax/data/bots/random.py"
"src/gbax/data/scenarios/__init__.py" = "gbax/data/scenarios/__init__.py"
"src/gbax/data/scenarios/mk_arcade_easy.py" = "gbax/data/scenarios/mk_arcade_easy.py"
"src/gbax/data/scenarios/smb3_world_1_1.py" = "gbax/data/scenarios/smb3_world_1_1.py"
"src/gbax/cores/__init__.py" = "gbax/cores/__init__.py"
"src/gbax/cores/mgba_libretro.so" = "gbax/cores/mgba_libretro.so"
"src/gbax/cores/LICENSE.mGBA" = "gbax/cores/LICENSE.mGBA"
"src/gbax/render/shaders/__init__.py" = "gbax/render/shaders/__init__.py"
"src/gbax/render/shaders/_vertex.wgsl" = "gbax/render/shaders/_vertex.wgsl"
"src/gbax/render/shaders/nearest.wgsl" = "gbax/render/shaders/nearest.wgsl"
"src/gbax/render/shaders/linear.wgsl" = "gbax/render/shaders/linear.wgsl"
"src/gbax/render/shaders/crt_lottes.wgsl" = "gbax/render/shaders/crt_lottes.wgsl"
"src/gbax/plugins/__init__.py" = "gbax/plugins/__init__.py"
"src/gbax/plugins/emerald_party.py" = "gbax/plugins/emerald_party.py"

[tool.hatch.build.targets.sdist]
# Keep build artifacts out of the source tarball — only the platform
# wheel ships the binary core. The sdist is the fallback for any
# non-Linux-x86_64 install; runtime errors clearly when invoked.
exclude = [
  "src/gbax/cores/mgba_libretro.so",
  "src/gbax/cores/LICENSE.mGBA",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
