[project]
name = "retrokix"
version = "1.1.0"
description = "Hacker-first, scriptable multi-console emulator (GBA + NES + SNES) with HTTP API"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Alejandro Piad" }]
keywords = ["gba", "emulator", "libretro", "mgba", "fastapi", "cli", "gameboy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: System :: Emulators",
]
dependencies = [
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "websockets>=12",  # WebSocket transport for /stream — uvicorn ships without by default
  "numpy>=1.26",
  "pillow>=10",
  "pysdl2>=0.9.16",
  "pysdl2-dll>=2.30",
  "cffi>=1.17",  # used by retrokix.libretro to bind the libretro ABI
  "imagehash>=4.3",  # pHash/dHash for scene-detection fallback
  "textual>=0.80",  # interactive ROM browser (retrokix browse)
]

[project.urls]
Homepage = "https://github.com/apiad/retrokix"
Source = "https://github.com/apiad/retrokix"
Issues = "https://github.com/apiad/retrokix/issues"

[project.scripts]
retrokix = "retrokix.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
]
gpu = ["wgpu>=0.19", "rendercanvas>=2.0"]
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrokix"]

[tool.hatch.build.targets.wheel.force-include]
"src/retrokix/data/no_intro_gba.json" = "retrokix/data/no_intro_gba.json"
"src/retrokix/data/libretro_cheats_gba.json" = "retrokix/data/libretro_cheats_gba.json"
"src/retrokix/data/no_intro_nes.json" = "retrokix/data/no_intro_nes.json"
"src/retrokix/data/libretro_cheats_nes.json" = "retrokix/data/libretro_cheats_nes.json"
"src/retrokix/data/no_intro_snes.json" = "retrokix/data/no_intro_snes.json"
"src/retrokix/data/libretro_cheats_snes.json" = "retrokix/data/libretro_cheats_snes.json"
"src/retrokix/data/wikipedia_fame.json" = "retrokix/data/wikipedia_fame.json"
"src/retrokix/data/emerald_species.json" = "retrokix/data/emerald_species.json"
"src/retrokix/data/emerald_growth_rates.json" = "retrokix/data/emerald_growth_rates.json"
"src/retrokix/data/emerald_species_info.json" = "retrokix/data/emerald_species_info.json"
"src/retrokix/data/emerald_evolutions.json" = "retrokix/data/emerald_evolutions.json"
"src/retrokix/data/emerald_levelup.json" = "retrokix/data/emerald_levelup.json"
"src/retrokix/data/emerald_moves.json" = "retrokix/data/emerald_moves.json"
"src/retrokix/data/emerald_type_chart.json" = "retrokix/data/emerald_type_chart.json"
"src/retrokix/data/emerald_items.json" = "retrokix/data/emerald_items.json"
"src/retrokix/data/emerald_abilities.json" = "retrokix/data/emerald_abilities.json"
"src/retrokix/data/emerald_natures.json" = "retrokix/data/emerald_natures.json"
"src/retrokix/data/emerald_mapsec.json" = "retrokix/data/emerald_mapsec.json"
"src/retrokix/data/emerald_types.json" = "retrokix/data/emerald_types.json"
"src/retrokix/data/bots/__init__.py" = "retrokix/data/bots/__init__.py"
"src/retrokix/data/bots/press_a.py" = "retrokix/data/bots/press_a.py"
"src/retrokix/data/bots/random.py" = "retrokix/data/bots/random.py"
"src/retrokix/data/scenarios/__init__.py" = "retrokix/data/scenarios/__init__.py"
"src/retrokix/data/scenarios/mk_arcade_easy.py" = "retrokix/data/scenarios/mk_arcade_easy.py"
"src/retrokix/data/scenarios/smb3_world_1_1.py" = "retrokix/data/scenarios/smb3_world_1_1.py"
"src/retrokix/cores/__init__.py" = "retrokix/cores/__init__.py"
"src/retrokix/cores/mgba_libretro.so" = "retrokix/cores/mgba_libretro.so"
"src/retrokix/cores/LICENSE.mGBA" = "retrokix/cores/LICENSE.mGBA"
"src/retrokix/cores/fceumm_libretro.so" = "retrokix/cores/fceumm_libretro.so"
"src/retrokix/cores/LICENSE.FCEUmm" = "retrokix/cores/LICENSE.FCEUmm"
"src/retrokix/cores/snes9x_libretro.so" = "retrokix/cores/snes9x_libretro.so"
"src/retrokix/cores/LICENSE.snes9x" = "retrokix/cores/LICENSE.snes9x"
"src/retrokix/render/shaders/__init__.py" = "retrokix/render/shaders/__init__.py"
"src/retrokix/render/shaders/_vertex.wgsl" = "retrokix/render/shaders/_vertex.wgsl"
"src/retrokix/render/shaders/nearest.wgsl" = "retrokix/render/shaders/nearest.wgsl"
"src/retrokix/render/shaders/linear.wgsl" = "retrokix/render/shaders/linear.wgsl"
"src/retrokix/render/shaders/crt_lottes.wgsl" = "retrokix/render/shaders/crt_lottes.wgsl"
"src/retrokix/plugins/__init__.py" = "retrokix/plugins/__init__.py"
"src/retrokix/plugins/pokemon/__init__.py" = "retrokix/plugins/pokemon/__init__.py"
"src/retrokix/plugins/pokemon/emerald.py" = "retrokix/plugins/pokemon/emerald.py"
"src/retrokix/plugins/pokemon/emerald_driver.py" = "retrokix/plugins/pokemon/emerald_driver.py"
"src/retrokix/plugins/pokemon/shared/__init__.py" = "retrokix/plugins/pokemon/shared/__init__.py"
"src/retrokix/plugins/pokemon/shared/addresses.py" = "retrokix/plugins/pokemon/shared/addresses.py"
"src/retrokix/plugins/pokemon/shared/bag.py" = "retrokix/plugins/pokemon/shared/bag.py"
"src/retrokix/plugins/pokemon/shared/battle.py" = "retrokix/plugins/pokemon/shared/battle.py"
"src/retrokix/plugins/pokemon/shared/data.py" = "retrokix/plugins/pokemon/shared/data.py"
"src/retrokix/plugins/pokemon/shared/encounters.py" = "retrokix/plugins/pokemon/shared/encounters.py"
"src/retrokix/plugins/pokemon/shared/formulas.py" = "retrokix/plugins/pokemon/shared/formulas.py"
"src/retrokix/plugins/pokemon/shared/hints.py" = "retrokix/plugins/pokemon/shared/hints.py"
"src/retrokix/plugins/pokemon/shared/matchup.py" = "retrokix/plugins/pokemon/shared/matchup.py"
"src/retrokix/plugins/pokemon/shared/party.py" = "retrokix/plugins/pokemon/shared/party.py"
"src/retrokix/plugins/pokemon/shared/pokedex.py" = "retrokix/plugins/pokemon/shared/pokedex.py"
"src/retrokix/plugins/pokemon/shared/scene.py" = "retrokix/plugins/pokemon/shared/scene.py"
"src/retrokix/plugins/pokemon/shared/world.py" = "retrokix/plugins/pokemon/shared/world.py"

[tool.hatch.build.targets.sdist]
# Keep build artifacts out of the source tarball — only the platform
# wheel ships the binary core. The sdist is the fallback for any
# non-Linux-x86_64 install; runtime errors clearly when invoked.
exclude = [
  "src/retrokix/cores/mgba_libretro.so",
  "src/retrokix/cores/LICENSE.mGBA",
  "src/retrokix/cores/fceumm_libretro.so",
  "src/retrokix/cores/LICENSE.FCEUmm",
  "src/retrokix/cores/snes9x_libretro.so",
  "src/retrokix/cores/LICENSE.snes9x",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
